# StreamSalvage

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SEO-Audit-StreamSalvage-2026-06.md  package-lock.json  package.json  seo_head_block.html  sitemap.xml  vitest.config.ts
coverage/: index.html  lcov.info
coverage/components/: DropZone.tsx.html  ExportPanel.tsx.html  RepairProgress.tsx.html  StepTabs.tsx.html  VideoPreview.tsx.html  index.html
coverage/hooks/: index.html  useRepair.ts.html
coverage/lcov-report/: index.html
coverage/lib/: index.html  tauriCommands.ts.html
docs/: APP_FLOW.md  BACKEND_SCHEMA.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TRD.md  UI_UX_BRIEF.md
landing/: .gitignore  SCHEMA-AND-GUIDES-NOTES.md  index.html  next.config.js  package-lock.json  package.json  vercel.json
landing/guides/: index.html  obs-record-mkv-vs-mp4.html  repair-mp4-without-uploading.html  streamsalvage-vs-wondershare-repairit.html  untrunc-alternative.html
landing/pages/: [[...path]].js  success.js
landing/public/: index.html  robots.txt  sitemap.xml
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: DropZone.tsx  ExportPanel.tsx  NoReferenceWarning.tsx  ReferenceExplainer.tsx  RepairProgress.tsx  StepTabs.tsx  VideoPreview.tsx
src/hooks/: useRepair.ts
src/lib/: tauriCommands.ts
src/test/: DropZone.test.tsx  ExportPanel.test.tsx  RepairProgress.test.tsx  StepTabs.test.tsx  VideoPreview.test.tsx  tauriCommands.test.ts  useRepair.test.ts  (+1 more)
(+24 files in other folders)
