[package]
name = "streamsalvage"
version = "1.0.0"
description = "StreamSalvage desktop MP4 repair app"
authors = ["you"]
edition = "2021"

[lib]
name = "streamsalvage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
